# sparsematrix

./: .gitignore  CMakeLists.txt  README.md  ast.py  bench.cpp  eigentest.cpp  gen_triang.py  matrix.cpp  matrix.h  notes.md  opt_ast.py  optimize.cpp  requirements.txt  rset_example.mtx  rset_example_b.mtx  starter.cpp  symbolicanalysis.py  tests.py  transformation.py  utils.cpp  utils.h  utils.py
